Add seqFISH benchmarking
Signed-off-by: Lem <lemhui.inbox@gmail.com>

--- a/scripts/DataTools/seqFISH.ipynb
+++ b/scripts/DataTools/seqFISH.ipynb
@@ -83,6 +83,33 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2024-11-27T13:27:58.976841Z",
+     "start_time": "2024-11-27T13:27:58.964248Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import os\n",
+    "import re\n",
+    "\n",
+    "# Change directory to the root of the SpatialDeconBenchmark repository\n",
+    "os.chdir('/'.join(re.match(r'^(.*SpatialDeconBenchmark)', os.getcwd()).group(0).split('/')))"
+   ],
+   "id": "af679d5ba1f27bff",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lem\\PycharmProjects\\SpatialDeconBenchmark\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2024-11-27T10:32:29.978076Z",
      "start_time": "2024-11-27T10:32:29.956062Z"
     }
@@ -114,58 +141,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T10:32:29.993110Z",
-     "start_time": "2024-11-27T10:32:29.980062Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "import os\n",
-    "\n",
-    "def find_and_set_directory(directory_name):\n",
-    "    # Start with the current working directory\n",
-    "    current_path = os.getcwd()\n",
-    "    \n",
-    "    # Keep moving up the directory hierarchy until we reach the root directory\n",
-    "    while current_path != os.path.dirname(current_path):  # The loop will terminate at the root directory\n",
-    "        if os.path.basename(current_path) == directory_name:\n",
-    "            # If the current directory name matches our target, set it as the cwd\n",
-    "            os.chdir(current_path)\n",
-    "            print(f\"Changed working directory to: {current_path}\")\n",
-    "            return\n",
-    "        # Move up one directory level\n",
-    "        current_path = os.path.dirname(current_path)\n",
-    "    \n",
-    "    print(\"Target directory not found.\")\n",
-    "    return\n",
-    "\n",
-    "# Define the target directory name\n",
-    "target_directory = 'SpatialDeconBenchmark'\n",
-    "\n",
-    "# Call the function\n",
-    "find_and_set_directory(target_directory)"
-   ],
-   "id": "af2caf8550f77777",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Changed working directory to: C:\\Users\\Lem\\PycharmProjects\\SpatialDeconBenchmark\n"
-     ]
-    }
-   ],
-   "execution_count": 2
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2024-11-27T10:32:31.616896Z",
      "start_time": "2024-11-27T10:32:29.994062Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "\n",
     "# Load the data\n",
@@ -374,7 +356,7 @@
     "# Map and update 'cell_type' in cortex_svz_annot based on specified new_labels\n",
     "new_labels = {\n",
     "    'Excitatory': 'eneuron',\n",
-    "    'Interneuron': 'ineuron ',\n",
+    "    'Interneuron': 'ineuron',\n",
     "    'Oligodendrocytes': 'olig',\n",
     "    'Endothelial': 'endo',\n",
     "    'Astrocytes': 'astrocyte',\n",
