--- a/scripts/Tangram/Tangram.ipynb
+++ b/scripts/Tangram/Tangram.ipynb
@@ -1,37 +1,31 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-27T12:49:50.772611Z",
+     "start_time": "2024-11-27T12:49:50.758596Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import os\n",
+    "import re\n",
     "\n",
-    "def find_and_set_directory(directory_name):\n",
-    "    # Start with the current working directory\n",
-    "    current_path = os.getcwd()\n",
-    "    \n",
-    "    # Keep moving up the directory hierarchy until we reach the root directory\n",
-    "    while current_path != os.path.dirname(current_path):  # The loop will terminate at the root directory\n",
-    "        if os.path.basename(current_path) == directory_name:\n",
-    "            # If the current directory name matches our target, set it as the cwd\n",
-    "            os.chdir(current_path)\n",
-    "            print(f\"Changed working directory to: {current_path}\")\n",
-    "            return\n",
-    "        # Move up one directory level\n",
-    "        current_path = os.path.dirname(current_path)\n",
-    "    \n",
-    "    print(\"Target directory not found.\")\n",
-    "    return\n",
-    "\n",
-    "# Define the target directory name\n",
-    "target_directory = 'SpatialDeconBenchmark'\n",
-    "\n",
-    "# Call the function\n",
-    "find_and_set_directory(target_directory)"
+    "# Change directory to the root of the SpatialDeconBenchmark repository\n",
+    "os.chdir('/'.join(re.match(r'^(.*SpatialDeconBenchmark)', os.getcwd()).group(0).split('/')))"
    ],
-   "id": "d9c934f5893f9314"
+   "id": "d9c934f5893f9314",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Changed working directory to: C:\\Users\\Lem\\PycharmProjects\\SpatialDeconBenchmark\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
@@ -42,6 +36,8 @@
    },
    "cell_type": "code",
    "source": [
+    "import os\n",
+    "\n",
     "# Define the directories\n",
     "seqfish_dir = os.getcwd() + '/data/seqFISH'\n",
     "visium_dir = os.getcwd() + '/data/Visium'\n",
