--- a/scripts/Metrics/calculate_metrics.ipynb
+++ b/scripts/Metrics/calculate_metrics.ipynb
@@ -160,7 +160,7 @@
    "cell_type": "code",
    "source": [
     "ground_truth = pd.read_csv(os.getcwd() + \"/data/seqFISH/ground_truth.csv\", index_col=0)\n",
-    "results_dir = os.getcwd() + \"/results/\"\n",
+    "results_dir = os.getcwd() + \"/results/seqFISH/\"\n",
     "\n",
     "benchmark = []\n",
     "for result in os.listdir(results_dir):\n",
