--- a/scripts/Tangram/Tangram.ipynb
+++ b/scripts/Tangram/Tangram.ipynb
@@ -42,7 +42,7 @@
     "seqfish_dir = os.getcwd() + '/data/seqFISH'\n",
     "visium_dir = os.getcwd() + '/data/Visium'\n",
     "data_dir = os.getcwd() + '/data/methods/Tangram'\n",
-    "results_dir = os.getcwd() + '/results'\n",
+    "results_dir = os.getcwd() + '/results/seqFISH'\n",
     "\n",
     "seqfish_sc_file = f'{data_dir}/seqFISH_sc.h5ad'\n",
     "seqfish_st_file = f'{data_dir}/seqFISH_st.h5ad'\n",
