--- a/scripts/Tangram/Tangram.ipynb
+++ b/scripts/Tangram/Tangram.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T12:49:50.772611Z",
-     "start_time": "2024-11-27T12:49:50.758596Z"
+     "end_time": "2024-11-28T10:23:31.299093Z",
+     "start_time": "2024-11-28T10:23:31.273567Z"
     }
    },
    "cell_type": "code",
@@ -16,22 +16,14 @@
     "os.chdir('/'.join(re.match(r'^(.*SpatialDeconBenchmark)', os.getcwd()).group(0).split('/')))"
    ],
    "id": "d9c934f5893f9314",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Changed working directory to: C:\\Users\\Lem\\PycharmProjects\\SpatialDeconBenchmark\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T04:38:25.232401Z",
-     "start_time": "2024-11-27T04:38:25.202208Z"
+     "end_time": "2024-11-28T10:23:31.315095Z",
+     "start_time": "2024-11-28T10:23:31.303092Z"
     }
    },
    "cell_type": "code",
@@ -42,7 +34,7 @@
     "seqfish_dir = os.getcwd() + '/data/seqFISH'\n",
     "visium_dir = os.getcwd() + '/data/Visium'\n",
     "data_dir = os.getcwd() + '/data/methods/Tangram'\n",
-    "results_dir = os.getcwd() + '/results/seqFISH'\n",
+    "results_dir = os.getcwd() + '/results'\n",
     "\n",
     "seqfish_sc_file = f'{data_dir}/seqFISH_sc.h5ad'\n",
     "seqfish_st_file = f'{data_dir}/seqFISH_st.h5ad'\n",
@@ -51,7 +43,7 @@
    ],
    "id": "1470412db1111551",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -62,8 +54,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T04:38:27.306080Z",
-     "start_time": "2024-11-27T04:38:25.232401Z"
+     "end_time": "2024-11-28T10:23:33.260699Z",
+     "start_time": "2024-11-28T10:23:31.317090Z"
     }
    },
    "cell_type": "code",
@@ -143,7 +135,7 @@
      ]
     }
    ],
-   "execution_count": 34
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -154,8 +146,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T04:39:18.986010Z",
-     "start_time": "2024-11-27T04:38:27.306080Z"
+     "end_time": "2024-11-28T10:24:30.993088Z",
+     "start_time": "2024-11-28T10:23:33.264702Z"
     }
    },
    "cell_type": "code",
@@ -239,7 +231,7 @@
      ]
     }
    ],
-   "execution_count": 35
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -250,8 +242,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T04:42:22.213573Z",
-     "start_time": "2024-11-27T04:39:19.015555Z"
+     "end_time": "2024-11-28T10:29:07.211685Z",
+     "start_time": "2024-11-28T10:24:31.018199Z"
     }
    },
    "cell_type": "code",
@@ -315,7 +307,7 @@
     "    cell_type_density = (cell_type_density.T / cell_type_density.sum(axis=1)).T\n",
     "    \n",
     "    # Save the cell-type density data to a CSV file\n",
-    "    cell_type_density.to_csv(f'{results_dir}/{db_name}_Tangram.csv')\n",
+    "    cell_type_density.to_csv(f'{results_dir}/{db_name}/{db_name}_Tangram.csv')\n",
     "    \n",
     "    # Calculate and print the total execution time of the script\n",
     "    end = time.time()\n",
@@ -354,7 +346,7 @@
      "output_type": "stream",
      "text": [
       "Top 10 markers for each cell type:\n",
-      "  astrocyte    endo  eneuron ineuron  microglia      olig\n",
+      "  astrocyte    endo  eneuron  ineuron microglia      olig\n",
       "0      gja1    pltp  slc17a7  slc32a1     csf1r    cldn11\n",
       "1    atp1b2  col4a2   clstn1   pcp4l1     itgb5       mag\n",
       "2     fgfr3     eng   lingo1   diras1       grn       cnp\n",
@@ -378,12 +370,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.582, KL reg: 0.527\n",
+      "Score: 0.588, KL reg: 0.509\n",
       "Score: 0.894, KL reg: 0.001\n",
       "Score: 0.896, KL reg: 0.000\n",
       "Score: 0.896, KL reg: 0.000\n",
       "Score: 0.896, KL reg: 0.000\n",
-      "Score: 0.896, KL reg: 0.000\n",
+      "Score: 0.897, KL reg: 0.000\n",
       "Score: 0.897, KL reg: 0.000\n",
       "Score: 0.897, KL reg: 0.000\n",
       "Score: 0.897, KL reg: 0.000\n",
@@ -402,7 +394,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 5.07 seconds\n",
+      "Execution time: 7.63 seconds\n",
       "\n",
       "Results for Visium data:\n",
       "WARNING: Default of the method has been changed to 't-test' from 't-test_overestim_var'\n",
@@ -475,7 +467,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.443, KL reg: 0.188\n",
+      "Score: 0.442, KL reg: 0.194\n",
       "Score: 0.605, KL reg: 0.000\n",
       "Score: 0.606, KL reg: 0.000\n",
       "Score: 0.607, KL reg: 0.000\n",
@@ -499,24 +491,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 178.08 seconds\n"
+      "Execution time: 263.87 seconds\n"
      ]
     }
    ],
-   "execution_count": 36
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T04:42:22.229447Z",
-     "start_time": "2024-11-27T04:42:22.213573Z"
+     "end_time": "2024-11-28T10:29:07.355032Z",
+     "start_time": "2024-11-28T10:29:07.213686Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "barcodes = st_coords.iloc[:, 0]\n",
+    "visium_results = pd.read_csv(f'{results_dir}/Visium/Visium_Tangram.csv', index_col=0)\n",
+    "if 'barcodes' not in visium_results.columns:\n",
+    "    visium_results.insert(0, 'barcodes', barcodes)\n",
+    "    visium_results.to_csv(f'{results_dir}/Visium/Visium_Tangram.csv', index=False)\n",
+    "else:\n",
+    "    print(\"Results file already contains the barcode column.\")"
+   ],
+   "id": "1fcbdda6c170d3e8",
+   "outputs": [],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-28T10:29:07.370485Z",
+     "start_time": "2024-11-28T10:29:07.356053Z"
     }
    },
    "cell_type": "code",
    "source": "",
-   "id": "57b2f6fd8c2e5ba2",
+   "id": "69384936a4c0c8d0",
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 10
   }
  ],
  "metadata": {
