Update metrics code
Signed-off-by: Lem <lemhui.inbox@gmail.com>

--- a/scripts/Metrics/calculate_spot_metrics.ipynb
+++ b/scripts/Metrics/calculate_spot_metrics.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T12:41:26.980529Z",
-     "start_time": "2024-11-28T12:41:26.958996Z"
+     "end_time": "2024-11-28T13:29:46.982275Z",
+     "start_time": "2024-11-28T13:29:46.968670Z"
     }
    },
    "cell_type": "code",
@@ -16,22 +16,25 @@
     "os.chdir('/'.join(re.match(r'^(.*SpatialDeconBenchmark)', os.getcwd()).group(0).split('/')))"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 47
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T12:47:01.936575Z",
-     "start_time": "2024-11-28T12:47:01.913450Z"
+     "end_time": "2024-11-28T13:29:46.997984Z",
+     "start_time": "2024-11-28T13:29:46.983290Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "import numpy as np\n",
     "import pandas as pd \n",
     "from libpysal.weights import W\n",
     "from scipy.spatial import KDTree\n",
     "from esda.moran import Moran, Moran_Local\n",
     "from scipy.stats import pearsonr\n",
+    "\n",
+    "np.random.seed(42)\n",
     "\n",
     "\n",
     "class SpotMetrics:\n",
@@ -86,8 +89,8 @@
     "                cell_abundance = self.deconvolved_mtx[cell_type]\n",
     "                \n",
     "                # Calculate Pearson correlation\n",
-    "                pcc, _ = pearsonr(gene_expression, cell_abundance)\n",
-    "                marker_pccs[marker] = pcc\n",
+    "                pcc, pcc_p_value = pearsonr(gene_expression, cell_abundance)\n",
+    "                marker_pccs[marker] = (pcc, pcc_p_value)\n",
     "\n",
     "            cell_types_pcc[cell_type] = marker_pccs\n",
     "        \n",
@@ -135,13 +138,13 @@
     "        self.local_moran = local_moran"
    ],
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 48
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T12:47:02.076246Z",
-     "start_time": "2024-11-28T12:47:02.065067Z"
+     "end_time": "2024-11-28T13:29:47.013628Z",
+     "start_time": "2024-11-28T13:29:46.998984Z"
     }
    },
    "cell_type": "code",
@@ -154,14 +157,14 @@
     "}"
    ],
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 49
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T12:51:41.400708Z",
-     "start_time": "2024-11-28T12:51:36.038453Z"
+     "end_time": "2024-11-28T13:29:51.091765Z",
+     "start_time": "2024-11-28T13:29:47.015605Z"
     }
    },
    "source": [
@@ -170,22 +173,24 @@
     "visium_locations = pd.read_csv(os.getcwd() + \"/data/Visium/filtered_st_locations.csv\", index_col=0)\n",
     "visium_locations.index = list(map(lambda x: \".\".join(x.split(\"-\")), visium_locations.index))\n",
     "\n",
-    "results_dir = os.getcwd() + \"/results/Visium/\"\n",
-    "benchmark = []"
+    "results_dir = os.getcwd() + \"/results/Visium/\""
    ],
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 50
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T12:52:00.639169Z",
-     "start_time": "2024-11-28T12:51:41.402710Z"
+     "end_time": "2024-11-28T13:30:09.527582Z",
+     "start_time": "2024-11-28T13:29:51.094734Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def run_benchmarking():\n",
+    "    benchmark_pcc = []\n",
+    "    benchmark_mi = []\n",
+    "\n",
     "    for result in os.listdir(results_dir):\n",
     "        method = result.split(\"_\")[1].split(\".\")[0]\n",
     "        \n",
@@ -198,44 +203,41 @@
     "        visium_metrics.compute_spatial_weights(6)\n",
     "        visium_metrics.calculate_moran()\n",
     "        \n",
-    "        # Collecting data for benchmarking\n",
+    "        # Collect data for Pearson Correlation Coefficient\n",
     "        for cell_type, pcc_values in visium_metrics.pcc.items():\n",
-    "            for marker, pcc in pcc_values.items():\n",
-    "                global_moran, moran_p_value = visium_metrics.global_moran[cell_type]\n",
-    "                data = {\n",
+    "            for marker, (pcc, pcc_p_value) in pcc_values.items():\n",
+    "                data_pcc = {\n",
     "                    'method': method,\n",
     "                    'cell_type': cell_type,\n",
     "                    'marker': marker,\n",
     "                    'PCC': pcc,\n",
-    "                    'MI': global_moran,\n",
-    "                    'MI_p_value': moran_p_value\n",
+    "                    'PCC_p_value': pcc_p_value  \n",
     "                }\n",
-    "                benchmark.append(pd.DataFrame([data]))\n",
-    "        \n",
-    "        # Prepare dataframes for Local Moran's I and p-values\n",
-    "        local_moran_data = []\n",
-    "        local_moran_p_values = []\n",
+    "                benchmark_pcc.append(pd.DataFrame([data_pcc]))\n",
     "\n",
-    "        for cell_type in visium_metrics.local_moran:\n",
-    "            local_is, p_sim = visium_metrics.local_moran[cell_type]\n",
-    "            local_moran_df = pd.DataFrame(local_is, columns=[cell_type], index=visium_metrics.deconvolved_mtx.index)\n",
-    "            local_moran_p_df = pd.DataFrame(p_sim, columns=[cell_type], index=visium_metrics.deconvolved_mtx.index)\n",
-    "            local_moran_data.append(local_moran_df)\n",
-    "            local_moran_p_values.append(local_moran_p_df)\n",
+    "        # Collect data for Moran's I\n",
+    "        for cell_type in visium_metrics.global_moran:\n",
+    "            global_moran, moran_p_value = visium_metrics.global_moran[cell_type]\n",
+    "            data_mi = {\n",
+    "                'method': method,\n",
+    "                'cell_type': cell_type,\n",
+    "                'MI': global_moran,\n",
+    "                'MI_p_value': moran_p_value\n",
+    "            }\n",
+    "            benchmark_mi.append(pd.DataFrame([data_mi]))\n",
     "\n",
-    "        # Concatenate dataframes horizontally (cell types as columns)\n",
-    "        all_local_moran = pd.concat(local_moran_data, axis=1)\n",
-    "        all_local_p_values = pd.concat(local_moran_p_values, axis=1)\n",
+    "    # Concatenate and save PCC benchmarking results\n",
+    "    if benchmark_pcc:\n",
+    "        benchmark_pcc_df = pd.concat(benchmark_pcc, ignore_index=True)\n",
+    "        benchmark_pcc_df.to_csv(os.getcwd() + \"/results/Visium_PCC_Results.csv\", index=False)\n",
     "\n",
-    "        # Save to CSV\n",
-    "        all_local_moran.to_csv(f\"{os.getcwd()}/results/Visium_LMI/{method}_LMI.csv\")\n",
-    "        all_local_p_values.to_csv(f\"{os.getcwd()}/results/Visium_LMI/{method}_LMI_p_values.csv\")\n",
-    "\n",
+    "    # Concatenate and save MI benchmarking results\n",
+    "    if benchmark_mi:\n",
+    "        benchmark_mi_df = pd.concat(benchmark_mi, ignore_index=True)\n",
+    "        benchmark_mi_df.to_csv(os.getcwd() + \"/results/Visium_MI_Results.csv\", index=False)\n",
     "\n",
     "# Run benchmarking\n",
-    "run_benchmarking()\n",
-    "benchmark = pd.concat(benchmark, ignore_index=True)\n",
-    "benchmark.to_csv(os.getcwd() + \"/results/Visium_Benchmarking_Results.csv\", index=False)"
+    "run_benchmarking()"
    ],
    "outputs": [
     {
@@ -257,14 +259,19 @@
      ]
     }
    ],
-   "execution_count": 26
+   "execution_count": 51
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-28T13:30:09.542665Z",
+     "start_time": "2024-11-28T13:30:09.528583Z"
+    }
+   },
    "cell_type": "code",
+   "source": "",
    "outputs": [],
-   "execution_count": null,
-   "source": ""
+   "execution_count": 51
   }
  ],
  "metadata": {
