--- a/scripts/Metrics/calculate_metrics.ipynb
+++ b/scripts/Metrics/calculate_metrics.ipynb
@@ -160,7 +160,7 @@
    "cell_type": "code",
    "source": [
     "ground_truth = pd.read_csv(os.getcwd() + \"/data/seqFISH/ground_truth.csv\", index_col=0)\n",
-    "results_dir = os.getcwd() + \"/results/seqFISH/\"\n",
+    "results_dir = os.getcwd() + \"/method_results/seqFISH/\"\n",
     "\n",
     "benchmark = []\n",
     "for result in os.listdir(results_dir):\n",
@@ -181,7 +181,7 @@
     "    benchmark.append(pd.DataFrame([data]))\n",
     "        \n",
     "benchmark = pd.concat(benchmark, ignore_index=True)\n",
-    "benchmark.to_csv(os.getcwd() + \"/results/seqFISH_Benchmarking_Results.csv\", index=False)"
+    "benchmark.to_csv(os.getcwd() + \"/benchmark_results/seqFISH_Benchmarking_Results.csv\", index=False)"
    ],
    "outputs": [],
    "execution_count": 32
