--- a/scripts/Metrics/calculate_spot_metrics.ipynb
+++ b/scripts/Metrics/calculate_spot_metrics.ipynb
@@ -173,7 +173,8 @@
     "visium_locations = pd.read_csv(os.getcwd() + \"/data/Visium/filtered_st_locations.csv\", index_col=0)\n",
     "visium_locations.index = list(map(lambda x: \".\".join(x.split(\"-\")), visium_locations.index))\n",
     "\n",
-    "results_dir = os.getcwd() + \"/results/Visium/\""
+    "benchmark_results_dir = os.getcwd() + \"/benchmark_results/\"\n",
+    "results_dir = os.getcwd() + \"/method_results/Visium/\""
    ],
    "outputs": [],
    "execution_count": 55
@@ -203,6 +204,25 @@
     "        visium_metrics.compute_spatial_weights(6)\n",
     "        visium_metrics.calculate_moran()\n",
     "        \n",
+    "        # Prepare dataframes for Local Moran's I and p-values\n",
+    "        local_moran_data = []\n",
+    "        local_moran_p_values = []\n",
+    "\n",
+    "        for cell_type in visium_metrics.local_moran:\n",
+    "            local_is, p_sim = visium_metrics.local_moran[cell_type]\n",
+    "            local_moran_df = pd.DataFrame(local_is, columns=[cell_type], index=visium_metrics.deconvolved_mtx.index)\n",
+    "            local_moran_p_df = pd.DataFrame(p_sim, columns=[cell_type], index=visium_metrics.deconvolved_mtx.index)\n",
+    "            local_moran_data.append(local_moran_df)\n",
+    "            local_moran_p_values.append(local_moran_p_df)\n",
+    "\n",
+    "        # Concatenate dataframes horizontally (cell types as columns)\n",
+    "        all_local_moran = pd.concat(local_moran_data, axis=1)\n",
+    "        all_local_p_values = pd.concat(local_moran_p_values, axis=1)\n",
+    "\n",
+    "        # Save to CSV\n",
+    "        all_local_moran.to_csv(f\"{benchmark_results_dir}/Visium_LMI/{method}_LMI.csv\")\n",
+    "        all_local_p_values.to_csv(f\"{benchmark_results_dir}/Visium_LMI/{method}_LMI_p_values.csv\")\n",
+    "        \n",
     "        # Collect data for Pearson Correlation Coefficient\n",
     "        for cell_type, pcc_values in visium_metrics.pcc.items():\n",
     "            for marker, (pcc, pcc_p_value) in pcc_values.items():\n",
@@ -229,12 +249,12 @@
     "    # Concatenate and save PCC benchmarking results\n",
     "    if benchmark_pcc:\n",
     "        benchmark_pcc_df = pd.concat(benchmark_pcc, ignore_index=True)\n",
-    "        benchmark_pcc_df.to_csv(os.getcwd() + \"/results/Visium_PCC_Results.csv\", index=False)\n",
+    "        benchmark_pcc_df.to_csv(f\"{benchmark_results_dir}/Visium_PCC_Results.csv\", index=False)\n",
     "\n",
     "    # Concatenate and save MI benchmarking results\n",
     "    if benchmark_mi:\n",
     "        benchmark_mi_df = pd.concat(benchmark_mi, ignore_index=True)\n",
-    "        benchmark_mi_df.to_csv(os.getcwd() + \"/results/Visium_MI_Results.csv\", index=False)\n",
+    "        benchmark_mi_df.to_csv(os.getcwd() + f\"{benchmark_results_dir}/Visium_MI_Results.csv\", index=False)\n",
     "\n",
     "# Run benchmarking\n",
     "run_benchmarking()"
