Refactor project structure
Signed-off-by: Lem <lemhui.inbox@gmail.com>

--- a/scripts/Metrics/calculate_metrics.ipynb
+++ b/scripts/Metrics/calculate_metrics.ipynb
@@ -2,55 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-27T12:57:55.447521Z",
      "start_time": "2024-11-27T12:57:55.438522Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-11-28T14:08:47.680000Z",
+     "iopub.status.busy": "2024-11-28T14:08:47.680000Z",
+     "iopub.status.idle": "2024-11-28T14:08:48.359877Z",
+     "shell.execute_reply": "2024-11-28T14:08:48.359877Z"
     }
    },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.stats\n",
     "import scipy.spatial.distance"
-   ],
-   "outputs": [],
-   "execution_count": 28
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-27T13:12:55.037636Z",
      "start_time": "2024-11-27T13:12:55.024636Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-11-28T14:08:48.362858Z",
+     "iopub.status.busy": "2024-11-28T14:08:48.362858Z",
+     "iopub.status.idle": "2024-11-28T14:08:48.375476Z",
+     "shell.execute_reply": "2024-11-28T14:08:48.375476Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
     "\n",
     "# Change directory to the root of the SpatialDeconBenchmark repository\n",
     "os.chdir('/'.join(re.match(r'^(.*SpatialDeconBenchmark)', os.getcwd()).group(0).split('/')))"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Changed working directory to: C:\\Users\\Lem\\PycharmProjects\\SpatialDeconBenchmark\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-27T12:57:55.494585Z",
      "start_time": "2024-11-27T12:57:55.470521Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-11-28T14:08:48.377997Z",
+     "iopub.status.busy": "2024-11-28T14:08:48.377997Z",
+     "iopub.status.idle": "2024-11-28T14:08:48.422366Z",
+     "shell.execute_reply": "2024-11-28T14:08:48.422366Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "class Metrics:\n",
     "    def __init__(self, method_name, ground_truth_mtx, deconvolved_mtx):\n",
@@ -141,26 +153,32 @@
     "        self.jsd = jsd_per_cell_type\n",
     "\n",
     "        return self.jsd"
-   ],
-   "outputs": [],
-   "execution_count": 30
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": ""
+   "metadata": {},
+   "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-27T12:58:36.588434Z",
      "start_time": "2024-11-27T12:58:36.550434Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-11-28T14:08:48.424368Z",
+     "iopub.status.busy": "2024-11-28T14:08:48.424368Z",
+     "iopub.status.idle": "2024-11-28T14:08:48.452879Z",
+     "shell.execute_reply": "2024-11-28T14:08:48.452879Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "ground_truth = pd.read_csv(os.getcwd() + \"/data/seqFISH/ground_truth.csv\", index_col=0)\n",
-    "results_dir = os.getcwd() + \"/method_results/seqFISH/\"\n",
+    "results_dir = os.getcwd() + \"/results/methods/seqFISH/\"\n",
     "\n",
     "benchmark = []\n",
     "for result in os.listdir(results_dir):\n",
@@ -181,22 +199,20 @@
     "    benchmark.append(pd.DataFrame([data]))\n",
     "        \n",
     "benchmark = pd.concat(benchmark, ignore_index=True)\n",
-    "benchmark.to_csv(os.getcwd() + \"/benchmark_results/seqFISH_Benchmarking_Results.csv\", index=False)"
-   ],
-   "outputs": [],
-   "execution_count": 32
+    "benchmark.to_csv(os.getcwd() + \"/results/benchmark/seqFISH_Benchmark_Results.csv\", index=False)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-27T12:57:55.542603Z",
      "start_time": "2024-11-27T12:57:55.527589Z"
     }
    },
-   "cell_type": "code",
-   "source": "",
    "outputs": [],
-   "execution_count": 31
+   "source": []
   }
  ],
  "metadata": {
@@ -215,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
