--- a/scripts/Metrics/calculate_spot_metrics.ipynb
+++ b/scripts/Metrics/calculate_spot_metrics.ipynb
@@ -1,31 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-28T13:30:42.589578Z",
      "start_time": "2024-11-28T13:30:42.578061Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-11-28T14:08:54.771438Z",
+     "iopub.status.busy": "2024-11-28T14:08:54.771438Z",
+     "iopub.status.idle": "2024-11-28T14:08:54.783707Z",
+     "shell.execute_reply": "2024-11-28T14:08:54.782701Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
     "\n",
     "# Change directory to the root of the SpatialDeconBenchmark repository\n",
     "os.chdir('/'.join(re.match(r'^(.*SpatialDeconBenchmark)', os.getcwd()).group(0).split('/')))"
-   ],
-   "outputs": [],
-   "execution_count": 52
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-28T13:30:42.605346Z",
      "start_time": "2024-11-28T13:30:42.591577Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-11-28T14:08:54.785708Z",
+     "iopub.status.busy": "2024-11-28T14:08:54.785708Z",
+     "iopub.status.idle": "2024-11-28T14:08:56.246032Z",
+     "shell.execute_reply": "2024-11-28T14:08:56.246032Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd \n",
@@ -136,18 +150,24 @@
     "\n",
     "        self.global_moran = global_moran\n",
     "        self.local_moran = local_moran"
-   ],
-   "outputs": [],
-   "execution_count": 53
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-28T13:30:42.621383Z",
      "start_time": "2024-11-28T13:30:42.606345Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-11-28T14:08:56.249534Z",
+     "iopub.status.busy": "2024-11-28T14:08:56.249534Z",
+     "iopub.status.idle": "2024-11-28T14:08:56.266142Z",
+     "shell.execute_reply": "2024-11-28T14:08:56.262143Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# Cell types and markers selected for visualization in benchmark paper\n",
     "marker_genes_dict = {\n",
@@ -155,38 +175,75 @@
     "    \"Ext_Thal\": [\"Synpo2\", \"Ptpn3\", \"Slc17a6\"],\n",
     "    \"Ext_ClauPyr\": [\"Nr4a2\", \"Synpr\"]\n",
     "}"
-   ],
-   "outputs": [],
-   "execution_count": 54
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-28T13:30:46.246202Z",
      "start_time": "2024-11-28T13:30:42.622788Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-11-28T14:08:56.268247Z",
+     "iopub.status.busy": "2024-11-28T14:08:56.268247Z",
+     "iopub.status.idle": "2024-11-28T14:08:59.722075Z",
+     "shell.execute_reply": "2024-11-28T14:08:59.722075Z"
     }
    },
+   "outputs": [],
    "source": [
     "# Load the Visium deconvolved matrix\n",
     "visium_spatial = pd.read_csv(os.getcwd() + \"/data/Visium/filtered_st_counts.csv\", index_col=0)\n",
     "visium_locations = pd.read_csv(os.getcwd() + \"/data/Visium/filtered_st_locations.csv\", index_col=0)\n",
     "visium_locations.index = list(map(lambda x: \".\".join(x.split(\"-\")), visium_locations.index))\n",
     "\n",
-    "benchmark_results_dir = os.getcwd() + \"/benchmark_results/\"\n",
-    "results_dir = os.getcwd() + \"/method_results/Visium/\""
-   ],
-   "outputs": [],
-   "execution_count": 55
+    "benchmark_results_dir = os.getcwd() + \"/results/benchmark/\"\n",
+    "results_dir = os.getcwd() + \"/results/methods/Visium/\""
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-28T13:31:04.699746Z",
      "start_time": "2024-11-28T13:30:46.247187Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-11-28T14:08:59.725975Z",
+     "iopub.status.busy": "2024-11-28T14:08:59.724992Z",
+     "iopub.status.idle": "2024-11-28T14:09:17.784149Z",
+     "shell.execute_reply": "2024-11-28T14:09:17.783137Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lem\\anaconda3\\envs\\metrics-env\\lib\\site-packages\\esda\\moran.py:254: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  k = k_num / k_den\n",
+      "C:\\Users\\Lem\\anaconda3\\envs\\metrics-env\\lib\\site-packages\\esda\\moran.py:266: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  return self.n / s0 * inum / self.z2ss\n",
+      "C:\\Users\\Lem\\anaconda3\\envs\\metrics-env\\lib\\site-packages\\esda\\moran.py:223: RuntimeWarning: invalid value encountered in divide\n",
+      "  self.z /= sy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Lem\\anaconda3\\envs\\metrics-env\\lib\\site-packages\\esda\\moran.py:254: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  k = k_num / k_den\n",
+      "C:\\Users\\Lem\\anaconda3\\envs\\metrics-env\\lib\\site-packages\\esda\\moran.py:266: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  return self.n / s0 * inum / self.z2ss\n",
+      "C:\\Users\\Lem\\anaconda3\\envs\\metrics-env\\lib\\site-packages\\esda\\moran.py:223: RuntimeWarning: invalid value encountered in divide\n",
+      "  self.z /= sy\n"
+     ]
+    }
+   ],
    "source": [
     "def run_benchmarking():\n",
     "    benchmark_pcc = []\n",
@@ -254,44 +311,23 @@
     "    # Concatenate and save MI benchmarking results\n",
     "    if benchmark_mi:\n",
     "        benchmark_mi_df = pd.concat(benchmark_mi, ignore_index=True)\n",
-    "        benchmark_mi_df.to_csv(os.getcwd() + f\"{benchmark_results_dir}/Visium_MI_Results.csv\", index=False)\n",
+    "        benchmark_mi_df.to_csv(f\"{benchmark_results_dir}/Visium_MI_Results.csv\", index=False)\n",
     "\n",
     "# Run benchmarking\n",
     "run_benchmarking()"
-   ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Lem\\anaconda3\\envs\\metrics-env\\lib\\site-packages\\esda\\moran.py:254: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  k = k_num / k_den\n",
-      "C:\\Users\\Lem\\anaconda3\\envs\\metrics-env\\lib\\site-packages\\esda\\moran.py:266: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  return self.n / s0 * inum / self.z2ss\n",
-      "C:\\Users\\Lem\\anaconda3\\envs\\metrics-env\\lib\\site-packages\\esda\\moran.py:223: RuntimeWarning: invalid value encountered in divide\n",
-      "  self.z /= sy\n",
-      "C:\\Users\\Lem\\anaconda3\\envs\\metrics-env\\lib\\site-packages\\esda\\moran.py:254: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  k = k_num / k_den\n",
-      "C:\\Users\\Lem\\anaconda3\\envs\\metrics-env\\lib\\site-packages\\esda\\moran.py:266: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  return self.n / s0 * inum / self.z2ss\n",
-      "C:\\Users\\Lem\\anaconda3\\envs\\metrics-env\\lib\\site-packages\\esda\\moran.py:223: RuntimeWarning: invalid value encountered in divide\n",
-      "  self.z /= sy\n"
-     ]
-    }
-   ],
-   "execution_count": 56
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-28T13:31:04.715643Z",
      "start_time": "2024-11-28T13:31:04.699746Z"
     }
    },
-   "cell_type": "code",
-   "source": "",
    "outputs": [],
-   "execution_count": 56
+   "source": []
   }
  ],
  "metadata": {
@@ -310,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
