Fix Tangram bug
Signed-off-by: Lem <lemhui.inbox@gmail.com>

--- a/scripts/DataTools/seqFISH.ipynb
+++ b/scripts/DataTools/seqFISH.ipynb
@@ -355,21 +355,21 @@
    "source": [
     "# Map and update 'cell_type' in cortex_svz_annot based on specified new_labels\n",
     "new_labels = {\n",
-    "    'Excitatory': 'eneuron',\n",
-    "    'Interneuron': 'ineuron',\n",
+    "    'Excitatory': 'eNeuron',\n",
+    "    'Interneuron': 'iNeuron',\n",
     "    'Oligodendrocytes': 'olig',\n",
-    "    'Endothelial': 'endo',\n",
-    "    'Astrocytes': 'astrocyte',\n",
+    "    'Endothelial': 'endo_mural',\n",
+    "    'Astrocytes': 'astrocytes',\n",
     "    'Microglia': 'microglia',\n",
     "}\n",
     "\n",
     "# Mapping of standardised labels to full descriptive names\n",
     "label_to_full_name = {\n",
-    "    'eneuron': 'Excitatory Neuron',\n",
-    "    'ineuron': 'Interneuron',\n",
-    "    'olig': 'Oligodendrocyte',\n",
-    "    'endo': 'Endothelial Cell',\n",
-    "    'astrocyte': 'Astrocyte',\n",
+    "    'eNeuron': 'Excitatory Neuron',\n",
+    "    'iNeuron': 'Interneuron',\n",
+    "    'Olig': 'Oligodendrocyte',\n",
+    "    'endo_mural': 'Endothelial Cell',\n",
+    "    'astrocytes': 'Astrocyte',\n",
     "    'microglia': 'Microglia',\n",
     "}\n",
     "\n",
