--- a/scripts/Metrics/calculate_metrics.ipynb
+++ b/scripts/Metrics/calculate_metrics.ipynb
@@ -2,67 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-27T12:57:55.447521Z",
-     "start_time": "2024-11-27T12:57:55.438522Z"
-    },
     "execution": {
      "iopub.execute_input": "2024-11-28T14:08:47.680000Z",
      "iopub.status.busy": "2024-11-28T14:08:47.680000Z",
      "iopub.status.idle": "2024-11-28T14:08:48.359877Z",
      "shell.execute_reply": "2024-11-28T14:08:48.359877Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2024-11-28T17:10:28.754961Z",
+     "start_time": "2024-11-28T17:10:28.736599Z"
     }
    },
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.stats\n",
     "import scipy.spatial.distance"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 21
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-27T13:12:55.037636Z",
-     "start_time": "2024-11-27T13:12:55.024636Z"
-    },
     "execution": {
      "iopub.execute_input": "2024-11-28T14:08:48.362858Z",
      "iopub.status.busy": "2024-11-28T14:08:48.362858Z",
      "iopub.status.idle": "2024-11-28T14:08:48.375476Z",
      "shell.execute_reply": "2024-11-28T14:08:48.375476Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2024-11-28T17:10:28.770218Z",
+     "start_time": "2024-11-28T17:10:28.759222Z"
     }
    },
-   "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
     "\n",
     "# Change directory to the root of the SpatialDeconBenchmark repository\n",
     "os.chdir('/'.join(re.match(r'^(.*SpatialDeconBenchmark)', os.getcwd()).group(0).split('/')))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 22
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-27T12:57:55.494585Z",
-     "start_time": "2024-11-27T12:57:55.470521Z"
-    },
     "execution": {
      "iopub.execute_input": "2024-11-28T14:08:48.377997Z",
      "iopub.status.busy": "2024-11-28T14:08:48.377997Z",
      "iopub.status.idle": "2024-11-28T14:08:48.422366Z",
      "shell.execute_reply": "2024-11-28T14:08:48.422366Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2024-11-28T17:10:28.801757Z",
+     "start_time": "2024-11-28T17:10:28.773226Z"
     }
    },
-   "outputs": [],
    "source": [
     "class Metrics:\n",
     "    def __init__(self, method_name, ground_truth_mtx, deconvolved_mtx):\n",
@@ -153,7 +151,9 @@
     "        self.jsd = jsd_per_cell_type\n",
     "\n",
     "        return self.jsd"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 23
   },
   {
    "cell_type": "markdown",
@@ -162,20 +162,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-27T12:58:36.588434Z",
-     "start_time": "2024-11-27T12:58:36.550434Z"
-    },
     "execution": {
      "iopub.execute_input": "2024-11-28T14:08:48.424368Z",
      "iopub.status.busy": "2024-11-28T14:08:48.424368Z",
      "iopub.status.idle": "2024-11-28T14:08:48.452879Z",
      "shell.execute_reply": "2024-11-28T14:08:48.452879Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2024-11-28T17:10:28.894934Z",
+     "start_time": "2024-11-28T17:10:28.805877Z"
     }
    },
-   "outputs": [],
    "source": [
     "ground_truth = pd.read_csv(os.getcwd() + \"/data/seqFISH/ground_truth.csv\", index_col=0)\n",
     "results_dir = os.getcwd() + \"/results/methods/seqFISH/\"\n",
@@ -200,19 +198,43 @@
     "        \n",
     "benchmark = pd.concat(benchmark, ignore_index=True)\n",
     "benchmark.to_csv(os.getcwd() + \"/results/benchmark/seqFISH_Benchmark_Results.csv\", index=False)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['astrocytes', 'eNeuron', 'endo_mural', 'iNeuron', 'microglia', 'olig'], dtype='object')\n",
+      "Index(['astrocytes', 'endo_mural', 'eNeuron', 'iNeuron', 'microglia', 'olig'], dtype='object')\n",
+      "Index(['astrocytes', 'eNeuron', 'endo_mural', 'iNeuron', 'microglia', 'olig'], dtype='object')\n",
+      "Index(['astrocytes', 'endo_mural', 'eNeuron', 'iNeuron', 'microglia', 'olig'], dtype='object')\n",
+      "Index(['astrocytes', 'eNeuron', 'endo_mural', 'iNeuron', 'microglia', 'olig'], dtype='object')\n",
+      "Index(['iNeuron', 'eNeuron', 'olig', 'microglia', 'endo_mural', 'astrocytes'], dtype='object')\n",
+      "Index(['astrocytes', 'eNeuron', 'endo_mural', 'iNeuron', 'microglia', 'olig'], dtype='object')\n",
+      "Index(['Olig', 'eNeuron', 'endo_mural', 'iNeuron', 'astrocytes', 'microglia'], dtype='object')\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Cell type labels do not match",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[24], line 9\u001B[0m\n\u001B[0;32m      7\u001B[0m mtx \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mread_csv(results_dir \u001B[38;5;241m+\u001B[39m result, index_col\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0\u001B[39m)\n\u001B[0;32m      8\u001B[0m metrics \u001B[38;5;241m=\u001B[39m Metrics(method, ground_truth, mtx)\n\u001B[1;32m----> 9\u001B[0m \u001B[43mmetrics\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcheck_mtx_format\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     10\u001B[0m metrics\u001B[38;5;241m.\u001B[39mcalculate_jsd()\n\u001B[0;32m     11\u001B[0m metrics\u001B[38;5;241m.\u001B[39mcalculate_rmse()\n",
+      "Cell \u001B[1;32mIn[23], line 22\u001B[0m, in \u001B[0;36mMetrics.check_mtx_format\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m     20\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdeconvolved_mtx\u001B[38;5;241m.\u001B[39mcolumns)\n\u001B[0;32m     21\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mset\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mground_truth_mtx\u001B[38;5;241m.\u001B[39mcolumns) \u001B[38;5;241m!=\u001B[39m \u001B[38;5;28mset\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdeconvolved_mtx\u001B[38;5;241m.\u001B[39mcolumns):\n\u001B[1;32m---> 22\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mCell type labels do not match\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m     24\u001B[0m \u001B[38;5;66;03m# Check if grid labels match\u001B[39;00m\n\u001B[0;32m     25\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mset\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mground_truth_mtx\u001B[38;5;241m.\u001B[39mindex) \u001B[38;5;241m!=\u001B[39m \u001B[38;5;28mset\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdeconvolved_mtx\u001B[38;5;241m.\u001B[39mindex):\n",
+      "\u001B[1;31mValueError\u001B[0m: Cell type labels do not match"
+     ]
+    }
+   ],
+   "execution_count": 24
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-27T12:57:55.542603Z",
-     "start_time": "2024-11-27T12:57:55.527589Z"
-    }
-   },
+   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
