Update conversion script
Signed-off-by: Lem <lemhui.inbox@gmail.com>

--- a/scripts/Tangram/Tangram.ipynb
+++ b/scripts/Tangram/Tangram.ipynb
@@ -106,8 +106,8 @@
     "sc_counts = sc_counts_reset.set_index('cell_id')\n",
     "\n",
     "# Filter sc_counts to keep only columns that are also in st_counts\n",
-    "sc_counts.columns = sc_counts.columns.str.strip().str.lower()\n",
-    "st_counts.columns = st_counts.columns.str.strip().str.lower()\n",
+    "# sc_counts.columns = sc_counts.columns.str.strip().str.lower()\n",
+    "# st_counts.columns = st_counts.columns.str.strip().str.lower()\n",
     "common_genes = sc_counts.columns.intersection(st_counts.columns)\n",
     "sc_counts = sc_counts[common_genes]\n",
     "\n",
